fix: bbs模块 - 验证码图片转码问题 - 使用java.util包